--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -29,6 +29,7 @@ import init.qcom.usb.rc
 import init.target.rc
 
 on early-init
+    write /sys/block/mmcblk0/queue/scheduler noop
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
 
@@ -977,6 +978,7 @@ service wifi-crda /system/bin/sh /system/etc/init.crda.sh
 
 on property:sys.boot_completed=1
     start qcom-post-boot
+    write /sys/block/mmcblk0/queue/scheduler cfq
     start qti-testscripts
 
 service atfwd /system/bin/ATFWD-daemon
