--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -40,7 +40,12 @@ on fs
     wait /dev/block/bootdevice
 
     mount_all fstab.qcom
-    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/swappiness 200
+    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
+    write /proc/sys/vm/dirty_ratio 20
+    write /proc/sys/vm/min_free_kbytes 6759
+    write /proc/sys/vm/extra_free_kbytes 61440
+    
 
     # Keeping following partitions outside fstab file. As user may not have
     # these partition flashed on the device. Failure to mount any partition in fstab file
