--- a/nfc/libnfc-nxp.conf
+++ b/nfc/libnfc-nxp.conf
@@ -35,19 +35,19 @@ NXP_FW_NAME="libpn551_fw.so"
 
 ###############################################################################
 # System clock source selection configuration
-#define CLK_SRC_XTAL       1
-#define CLK_SRC_PLL        2
+#define CLK_SRC_XTAL       - 0x01
+#define CLK_SRC_PLL        - 0x02
 
 NXP_SYS_CLK_SRC_SEL=0x02
 
 ###############################################################################
 # System clock frequency selection configuration
-#define CLK_FREQ_13MHZ         1
-#define CLK_FREQ_19_2MHZ       2
-#define CLK_FREQ_24MHZ         3
-#define CLK_FREQ_26MHZ         4
-#define CLK_FREQ_38_4MHZ       5
-#define CLK_FREQ_52MHZ         6
+#define CLK_FREQ_13MHZ         - 0x01
+#define CLK_FREQ_19_2MHZ       - 0x02
+#define CLK_FREQ_24MHZ         - 0x03
+#define CLK_FREQ_26MHZ         - 0x04
+#define CLK_FREQ_38_4MHZ       - 0x05
+#define CLK_FREQ_52MHZ         - 0x06
 
 NXP_SYS_CLK_FREQ_SEL=0x02
 
