--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -59,7 +59,8 @@ on early-boot
 
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
-    symlink /sdcard /storage/sdcard0
+    #symlink /storage/sdcard0 /sdcard
+    symlink /storage/self/primary /storage/sdcard0
 
 on boot
     # add for fingerprint
