--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -29,14 +29,13 @@ WIFI_WAIT_TIMEOUT_SELECT = 0
 # without EULA consent, but the uncertainty can be high.
 # QNP preferred mode prefers QNP when there is EULA consent,
 # otherwise OSNLP is used.
-NLP_MODE = 1
+NLP_MODE = 3
 NLP_MODE_EMERGENCY = 2
 NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
 NLP_THRESHOLD = 3
 NLP_ACCURACY_MULTIPLE = 2
 NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 1
-
 #########################################
 # NLP PACKAGE AND ACTION SETTINGS
 #########################################
@@ -46,6 +45,10 @@ OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 # REGION_OSNLP_PACKAGE/REGION_OSNLP_ACTION:
 # These two values will be used as alternative
 # for particular region where default NLP is not functional.
+# liubin modified begin, 2016.10.18, use AMap NLP as default NLP in China
+REGION_OSNLP_PACKAGE = com.amap.android.location
+REGION_OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
+# liubin modified end
 #REGION_OSNLP_PACKAGE = com.baidu.map.location
 #REGION_OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 
@@ -82,11 +85,13 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
+# liubin modified 2016.06.23, Disable GTP_CELL by setting GTP_CELL from BASIC to DISABLED
 GTP_CELL=DISABLED
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
+# liubin modified 2016.06.23, Disable GTP_WIFI by setting GTP_WIFI from BASIC to DISABLED
 GTP_WIFI=DISABLED
 
 #GTP_WAA valid modes:
@@ -98,7 +103,8 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=PREMIUM
+# liubin modified 2016.06.23, Disable SAP by setting SAP from BASIC to DISABLED
+SAP=DISABLED
 
 #ODCPI valid modes:
 #DISABLED
@@ -199,9 +205,10 @@ BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
+# liubin modified 2016.06.23, Disable xtwifi-inet-agent
 PROCESS_NAME=/system/bin/xtwifi-inet-agent
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=inet gps
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xc0f
@@ -210,9 +217,10 @@ BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
+# liubin modified 2016.06.23, Disable xtwifi-client
 PROCESS_NAME=/system/bin/xtwifi-client
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=wifi inet gps rfs_shared system
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0f
@@ -221,9 +229,10 @@ BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
+# liubin modified 2016.06.23, Disable SAP
 PROCESS_NAME=/system/vendor/bin/slim_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=gps qcom_diag can
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
